np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grpc-server
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: grpc-server
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: grpc-client
    ports:
    - protocol: TCP
      port: 50051
